--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,7 @@
 body {
     font-size: 13px;
     font-family: 'Plus Jakarta Sans', sans-serif;
-    background: $white;
+    background: $lightGrayishBlue1;
     color: $darkGrayishBlue;
     line-height: 20px;
 }
