--- a/src/index.scss
+++ b/src/index.scss
@@ -11,7 +11,8 @@
 body {
     font-size: 13px;
     font-family: 'Plus Jakarta Sans', sans-serif;
-    background: $lightGrayishBlue1;
+    background: $veryLightGrayishBlue;
     color: $darkGrayishBlue;
     line-height: 20px;
+    height: 100vh;
 }
