--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -2,9 +2,9 @@
 @import "../sass/mixins";
 
 .card-component {
-    width: 600px;
-    max-width: 600px;
-    height: 700px;
+    width: 700px;
+    max-width: 700px;
+    height: 710px;
     margin: auto;
     padding: 24px 32px;
     border-radius: 15px;
@@ -28,7 +28,7 @@
         justify-content: space-between;
 
         h1 {
-            font-size: 22px;
+            font-size: 20px;
             color: $veryDarkBlue;
             display: flex;
             align-items: center;
@@ -44,7 +44,6 @@
         }
 
         span {
-            font-size: 13px;
             cursor: pointer;
         }
     }
@@ -65,7 +64,7 @@
         gap: 8px;
 
         .notification {
-            padding: 12px;
+            padding: 12px 14px;
             display: flex;
             gap: 16px;
             align-items: flex-start;
@@ -116,7 +115,7 @@
                 }
 
                 .notification-message {
-                    padding: 12px;
+                    padding: 12px 14px;
                     border-radius: 8px;
                     border: 1px solid $lightGrayishBlue1;
                     cursor: pointer;
